moodle/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
  selector:
    app: moodle
